buttons determine size toppings and price

--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
       <div class="col-sm-4">
         <h3>size?<hr></h3>
         Baby Cheesus
-        <div class="checkbox">
+        <div class="radio">
           <label>
-            <input type="checkbox" data-toggle="toggle">
+            <input id="small" type="radio" name="size" data-toggle="toggle">
             <img src="img/baby.png" alt="" />
           </label>
         </div>
         Cheesus
-        <div class="checkbox">
+        <div class="radio">
           <label>
-            <input type="checkbox" data-toggle="toggle">
+            <input id="medium" type="radio" name="size" data-toggle="toggle">
             <img src="img/medium.png" alt="" />
           </label>
         </div>
         Big Cheesus
-        <div class="checkbox">
+        <div class="radio">
           <label>
-            <input type="checkbox" data-toggle="toggle">
+            <input id="large" type="radio" name="size" data-toggle="toggle">
             <img src="img/large.png" alt="" />
           </label>
         </div>
@@ -71,7 +71,7 @@
         </div>
         <div class="checkbox">
           <label>
-            <input id="mushrooms" type="checkbox" data-toggle="toggle">
+            <input id="olives" type="checkbox" data-toggle="toggle">
             <img src="img/olives.png" alt="olives" />
           </label>
         </div>
@@ -86,7 +86,7 @@
       </div>
     </div>
     <div class="spacer">
-      <h2>COST:</h2>
+      <h2>COST: <span id="pizzacost"></span> </h2>
     </div>
     <div class="footer">
       <h1>cheesus pizza</h1>
