Added order history in backend. Still need access from front

--- a/index.html
+++ b/index.html
@@ -112,6 +112,6 @@
 
   </div>
   </body>
-
+  <script src="js/front.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
 </html>
